first post in progress

--- a/_posts/2016-1-24-Week-1.md
+++ b/_posts/2016-1-24-Week-1.md
@@ -7,4 +7,11 @@ Oh look! It's finally working!
 
 After several hours of installing dependencies and performing a little sysadmin magic; I finally have my environment set up and ready to take on the challenge of Downing's software engineering course. I know that I could have saved myself a lot of time if I had just connected to one of the CS lab machines, but I feel that setting up a development environment is a valuable learning experience that every computer science student should master before graduation. 
 
-In an effort to encourage my fellow students to accept the challenge of setting up their own development environment, here are some of the problems that I encountered and how I remedied them. After all, we can't always depend on someone else setting up the environment for us.
+In an effort to encourage my fellow students to accept the challenge of setting up their own development environment, here is one of the problems I encountered while setting up Jekyll and how I solved it. After all, we can't always depend on someone else setting up the environment for us. 
+
+<b>Disclaimer: 
+My personal system is running Ubuntu 14.04.3 LTS. I have no idea if users running a different distribution of Linux will experience this exact problem.</b>
+
+For those of you that don't know, Jekyll has a Ruby dependency. However, if you choose to install Ruby through the command line with <b><code>“sudo apt-get install ruby”</code></b> you will be installing Ruby 1.9 when you need to install Ruby 2.0 or higher for Jekyll. At this point many of us would think “Ok, that's fine. I'll just download and install Ruby 2.x.” However, Ubuntu does not allow this problem to be fixed that easily. 
+
+At this point you should then go to  <a href="https://www.brightbox.com/docs/ruby/ubuntu/">Brightbox</a> and follow their instructions.
