first post completed

--- a/_posts/2016-1-24-Week-1.md
+++ b/_posts/2016-1-24-Week-1.md
@@ -9,9 +9,22 @@ After several hours of installing dependencies and performing a little sysadmin 
 
 In an effort to encourage my fellow students to accept the challenge of setting up their own development environment, here is one of the problems I encountered while setting up Jekyll and how I solved it. After all, we can't always depend on someone else setting up the environment for us. 
 
-<b>Disclaimer: 
-My personal system is running Ubuntu 14.04.3 LTS. I have no idea if users running a different distribution of Linux will experience this exact problem.</b>
+<mark><b>Disclaimer: 
+My personal system is running Ubuntu 14.04.3 LTS. I have no idea if users running a different distribution of Linux will experience this exact problem.</b></mark>
 
 For those of you that don't know, Jekyll has a Ruby dependency. However, if you choose to install Ruby through the command line with <b><code>“sudo apt-get install ruby”</code></b> you will be installing Ruby 1.9 when you need to install Ruby 2.0 or higher for Jekyll. At this point many of us would think “Ok, that's fine. I'll just download and install Ruby 2.x.” However, Ubuntu does not allow this problem to be fixed that easily. 
 
-At this point you should then go to  <a href="https://www.brightbox.com/docs/ruby/ubuntu/">Brightbox</a> and follow their instructions.
+At this point you should then go to <a href="https://www.brightbox.com/docs/ruby/ubuntu/">Brightbox</a> and follow their instructions.
+
+<hr></hr>
+<h2>Questions for the Week</h2>
+
+<ul><li>What did you do this past week?</i>
+<br>This past week I flexed my sysadmin muscles and set up my development environment. I am very excited to be in Downing's Software Engineering course; a little intimidated, but mostly excited.
+
+<li>What's in your way?</i>
+<br>At the moment there is nothing in my way.
+
+<li>What will you do next week?</i>
+<br>Next week I will start working on the Collatz project, give myself a crash course on Python, and spend any remaining time personalizing my blog.
+
