--- a/_posts/2016-1-31-Week-2.md
+++ b/_posts/2016-1-31-Week-2.md
@@ -16,7 +16,7 @@ title: Software Engineering - Week 2
 
 <hr></hr>
 <h2>Tip for the Week</h2>
-Know when to step away from the keyboard.
+<b>Know when to step away from the keyboard.</b>
 
 <br>As a developer you will run into unexpected problems. How you handle these unexpected problems can affect how happy you are as a developer. When you're having a tough time managing a complex design or problem, you need to stop looking at your screen and step away from the keyboard. I find that going for a walk helps me to overcome frustration and allows me to refocus on the problem with renewed energy and a better perspective. 
 
