--- a/_posts/2016-1-31-Week-2.md
+++ b/_posts/2016-1-31-Week-2.md
@@ -5,20 +5,26 @@ title: Software Engineering - Week 2
 <h2>Questions for the Week</h2>
 <hr></hr>
 <ul><li><b>What did you do this past week?</b></i>
-<br>Week 2 of Software Engineering has come to an end and the course is really gaining momentum. The course content this last week packed full with Python and JavaScript along with introductions to testing and the software development life cycle. Even though seems like an almost overwhelming amount of information to cover in one week, the wide variety of topics keeps the class interesting and demonstrates how a good programmer must be flexible and able to wear many hats. 
+
+<br><br>Week 2 of Software Engineering has come to an end and the course is really gaining momentum. The course content this last week packed full with Python and JavaScript along with introductions to testing and the software development life cycle. Even though seems like an almost overwhelming amount of information to cover in one week, the wide variety of topics keeps the class interesting and demonstrates how a good programmer must be flexible and able to wear many hats.<br><br> 
 
 <li><b>What's in your way?</b></i>
-<br><br>Now that the semester is in full swing I find myself having the same issues with time management that I have every semester. Unfortunately the system upgrades that were pushed out at work this week caused quite a few fires and required more of my attention than usual to diagnose. Hopefully everything will go smoothly at work this coming week and I will be able to concentrate on my studies. 
+
+<br><br>Now that the semester is in full swing I find myself having the same issues with time management that I have every semester. Unfortunately the system upgrades that were pushed out at work this week caused quite a few fires and required more of my attention than usual to diagnose. Hopefully everything will go smoothly at work this coming week and I will be able to concentrate on my studies.<br><br>
 
 <li><b>What will you do next week?</b></i>
-<br><br>This coming week I will finish my collatz project and start working on project 2. 
+
+<br><br>This coming week I will finish my collatz project and start working on project 2.<br><br> 
 </ul>
 
-<hr></hr>
-<h2>Tip for the Week</h2>
-<b>Know when to step away from the keyboard.</b>
-<br><br>As a developer you will run into unexpected problems. How you handle these unexpected problems can affect how happy you are as a developer. When you're having a tough time managing a complex design or problem, you need to stop looking at your screen and step away from the keyboard. I find that going for a walk helps me to overcome frustration and allows me to refocus on the problem with renewed energy and a better perspective. 
 
+<h2>Tip for the Week</h2>
 <hr></hr>
+<b>Know when to step away from the keyboard.</b>
+
+<br>As a developer you will run into unexpected problems. How you handle these unexpected problems can affect how happy you are as a developer. When you're having a tough time managing a complex design or problem, you need to stop looking at your screen and step away from the keyboard. I find that going for a walk helps me to overcome frustration and allows me to refocus on the problem with renewed energy and a better perspective.<br><br> 
+
+
 <h2>Developer Joke for the Week</h2>
-<br>The fantastic element that explains the appeal of games to many developers is neither the fire-breathing monsters nor the milky-skinned, semi-clad sirens; it is the experience of carrying out a task from start to finish without any change in the user requirements.
+<hr></hr>
+The fantastic element that explains the appeal of games to many developers is neither the fire-breathing monsters nor the milky-skinned, semi-clad sirens; it is the experience of carrying out a task from start to finish without any change in the user requirements.
